\item Argument \code{y0} is removed from \code{REBMIX}, \code{bins}, \code{optbins} methods and from class \code{"REBMIX"}.
\item The C++ function \code{REBMIXK()} is added. It is called by the \code{REBMIX} method if the argument \code{Dataset} contains objects of type \code{"Histogram"}.
\item Numerous minor changes and debugging in C++ and R codes required due to the above changes.
}
}
\section{Changes in version 2.14.0}{ 
\itemize{
\item The package has been extended to three parametric family types.
\item Improved C++ functions \code{REBMIXKNN()}, \code{REBMIXKDE()} and \code{REBMIXH()}.
\item Method \code{plot} is debugged and improved.
\item Value \code{"cdf"} is added to \code{what} argument.
\item Class \code{"EMMIX.Theta"} is added.
\item Method \code{EMMIX} is added.
}
}
\section{Changes in version 2.13.1}{ 
\itemize{
\item Reduced size of the vignette.
\item Conditional jump or move depends on uninitialised value(s.
}
}
\section{Changes in version 2.13.0}{ 
\itemize{
\item Method \code{plot} is debugged and improved.
\item Improved C++ functions \code{REBMIXKNN()}, \code{REBMIXKDE()} and \code{REBMIXH()}.
\item EM algorithm is added to the C++ code for the improved estimation of all mixture model parameters.
\item Updated examples.
}
}
\section{Changes in version 2.12.0}{ 
\itemize{
\item Value \code{"density"} is replaced by \code{"pdf"} in \code{what} argument.
\item Value \code{"marginal"} is replaced by \code{"marginal pdf"} in \code{what} argument.
\item Value \code{"distribution"} is replaced by \code{"marginal cdf"} in \code{what} argument.
\item Improved C++ functions regarding memory allocation and efficiency.
\item Improved outlier detection.
\item \code{"Knuth equal"} and \code{"Knuth unequal"} binning rules are added to the existing \code{"Sturges"}, \code{"Log10"} and \code{"RootN"} rules.
\item Method \code{plot} is improved.
\item Method \code{RCLRMIX} is debugged and improved.
\item Method \code{REBMIX} is debugged and improved.