@@ -131,12 +131,12 @@ citEntry(entry = "Article",
   number = "2",
   pages = "14-28",
   doi = "10.5963/JAO0302001",
-  url = "http://paper.academicpub.org/PaperInIssue?IssueId=1677",
+  url = "https://repozitorij.uni-lj.si/Dokument.php?id=127674&lang=eng",
 
   textVersion  =
   paste("Marko Nagode (2015).",
         "Finite Mixture Modeling via REBMIX.",
         "Journal of Algorithms and Optimization, 3(2), 14-28.",
         "doi: 10.5963/JAO0302001 ",
-        "url: http://paper.academicpub.org/PaperInIssue?IssueId=1677.")
+        "url: https://repozitorij.uni-lj.si/Dokument.php?id=127674&lang=eng.")
 )
