@@ -41,7 +41,7 @@ currently not used.
 \author{Branislav Panic, Marko Nagode}
 \references{
 M. Nagode. Finite mixture modeling via REBMIX.
-Journal of Algorithms and Optimization, 3(2):14-28, 2015. \doi{10.5963/JAO0302001}.
+Journal of Algorithms and Optimization, 3(2):14-28, 2015. \url{https://repozitorij.uni-lj.si/Dokument.php?id=127674&lang=eng}.
 }
 \examples{
 # Generate multivariate normal datasets.
